# demo_dir_struct

./: LICENSE  pyproject.toml  test_file.py
src/roof/: util.py
src/roof/flaskapp/: __init__.py
src/roof/flaskapp/home/: __init__.py  routes.py
src/roof/flaskapp/templates/: base.html
src/roof/flaskapp/templates/home/: homepage.html
src/roof/otherapp/: important.py
